--- a/project/app/templates/adminpanel.html
+++ b/project/app/templates/adminpanel.html
@@ -63,7 +63,7 @@
 
     <div class="nav-buttons">
         <a href="{% url 'dashboard' userdata.id %}">Go to User Dashboard</a>
-        <a href="#">Go to Admin Dashboard</a>
+        <!-- <a href="#">Go to Admin Dashboard</a> -->
     </div>
 
     <div class="user-info">
